# lmr

./: Cargo.toml  LICENSE  README.md
src/: config.rs  generate.rs  main.rs  presentation.rs  send.rs  value.rs
src/presentation/: charts.rs  formats.rs  mod.rs  table.rs  template.html
src/source/: mod.rs  postgres.rs  sqlite.rs
