[package]
name = "smrtool"
version = "0.1.0"
edition = "2021"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
description = "Simple email report tool"
repository = "https://github.com/fernandobatels/smrtool"
keywords = ["mail", "report"]
categories = []
license = "MIT"
readme = "README.md"

[dependencies]
argopt = { version = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
mail-send = "0.4.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mail-builder = "0.3.2"
